solving bugs Tic-Tac-Toe

--- a/assets/projects/tic-tac-toe/index.html
+++ b/assets/projects/tic-tac-toe/index.html
@@ -42,7 +42,7 @@
       >
         - Tic Tac Toe -
       </h1>
-      <h2 style="color: white" class="text-center m-1">
+      <h2 style="color: white" class="text-center m-1 frase">
         Vez de jogar :
         <strong
           id="view_vez"
@@ -53,23 +53,24 @@
           >X</strong
         >
       </h2>
-
-      <h1 class="text-center m-2" id="win">Vencedor!!</h1>
-      <div class="d-flex justify-content-center">
-        <img class="espaco_jogo" id="img0" />
-        <img class="espaco_jogo" id="img1" />
-        <img class="espaco_jogo" id="img2" />
-      </div>
-      <div class="d-flex justify-content-center">
-        <img class="espaco_jogo" id="img3" />
-        <img class="espaco_jogo" id="img4" />
-        <img class="espaco_jogo" id="img5" />
-      </div>
-      <div class="d-flex justify-content-center">
-        <img class="espaco_jogo" id="img6" />
-        <img class="espaco_jogo" id="img7" />
-        <img class="espaco_jogo" id="img8" />
-      </div>
+      <h1 class="text-center m-2" id="win"></h1>
+      <container>
+        <div class="d-flex justify-content-center">
+          <img class="espaco_jogo" id="img0" />
+          <img class="espaco_jogo" id="img1" />
+          <img class="espaco_jogo" id="img2" />
+        </div>
+        <div class="d-flex justify-content-center">
+          <img class="espaco_jogo" id="img3" />
+          <img class="espaco_jogo" id="img4" />
+          <img class="espaco_jogo" id="img5" />
+        </div>
+        <div class="d-flex justify-content-center">
+          <img class="espaco_jogo" id="img6" />
+          <img class="espaco_jogo" id="img7" />
+          <img class="espaco_jogo" id="img8" />
+        </div>
+      </container>
 
       <div class="d-flex justify-content-center mt-2">
         <a href=""
@@ -77,6 +78,6 @@
         /></a>
       </div>
     </section>
-    <script src="app1.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
