--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
           <a href="https://github.com/OgaitLeug" target="_blank"
             ><i class="bx bxl-github"></i
           ></a>
-          <!-- <a href="https://www.instagram.com/pereiratiago7991/" target="_blank"
-            ><i class="bx bxl-instagram"></i
-          ></a> -->
         </div>
       </div>
       <!-- ====== NavBar ===== -->
@@ -242,7 +239,7 @@
               </div>
               <div>
                 <div class="icon-box">
-                  <div class="icon"><i class="bi bi-cone-striped"></i></div>
+                  <div class="icon"><i class="bx bx-user"></i></div>
                   <h4 class="title"><a href="">Login responsive project</a></h4>
                   <p class="description">Simple Login Page</p>
                 </div>
@@ -327,7 +324,7 @@
     });
     //Typed.js
     var options = {
-      strings: ["Junior-FullStack.", "Learning new Technologies"], // Array de frases
+      strings: ["Junior-FullStack.", "Learning new Technologies"], //Content
       typeSpeed: 50, // Typing speed
       backSpeed: 30, // Backspacing speed
       backDelay: 1000, // Delay before deleting the text
