--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                   <div class="icon"><i class="bi bi-controller"></i></div>
                   <h4 class="title">
                     <a
-                      href="assets/projects/tic-tac-toe/index.html"
+                      href="https://ogaitleug.github.io/tic-tac-toe/"
                       target="_blank"
                       >Tic-Tac-Toe</a
                     >
