added login link + js file

--- a/index.html
+++ b/index.html
@@ -240,7 +240,12 @@
               <div>
                 <div class="icon-box">
                   <div class="icon"><i class="bx bx-user"></i></div>
-                  <h4 class="title"><a href="">Login responsive project</a></h4>
+                  <h4 class="title">
+                    <a
+                      href="https://ogaitleug.github.io/projeto-login-responsivo/"
+                      >Login responsive project</a
+                    >
+                  </h4>
                   <p class="description">Simple Login Page</p>
                 </div>
               </div>
@@ -295,42 +300,5 @@
       <!-- End Contact Section -->
     </main>
   </body>
-  <script>
-    // Hide/Show Navbar
-    document
-      .getElementById("nav-toggle")
-      .addEventListener("click", function () {
-        const navbar = document.getElementById("header");
-        navbar.classList.toggle("mobile-nav-active");
-
-        // Change the icon Button
-        const toggleIcon = document.getElementById("nav-toggle");
-        toggleIcon.classList.toggle("bi-list");
-        toggleIcon.classList.toggle("bi-x");
-      });
-    // Event Listener for navbar links
-    const navLinks = document.querySelectorAll(".nav-link");
-    navLinks.forEach((link) => {
-      link.addEventListener("click", function () {
-        // Removes mobile-nav-active class to close navbar
-        const navbar = document.getElementById("header");
-        navbar.classList.remove("mobile-nav-active");
-
-        // Reset the Icon
-        const toggleIcon = document.getElementById("nav-toggle");
-        toggleIcon.classList.add("bi-list");
-        toggleIcon.classList.remove("bi-x");
-      });
-    });
-    //Typed.js
-    var options = {
-      strings: ["Junior-FullStack.", "Learning new Technologies"], //Content
-      typeSpeed: 50, // Typing speed
-      backSpeed: 30, // Backspacing speed
-      backDelay: 1000, // Delay before deleting the text
-      loop: true, // Whether it should keep looping or not
-    };
-
-    var typed = new Typed("#type", options);
-  </script>
+  <script src="assets/js/script.js"></script>
 </html>
